--- a/WebAPI/WebAPI.csproj
+++ b/WebAPI/WebAPI.csproj
@@ -21,9 +21,7 @@
   </ItemGroup>
 
   <ItemGroup>
-    <Reference Include="CorePackagesGeneral">
-      <HintPath>..\..\ProjectCorePackages\CorePackagesGeneral\bin\Debug\net7.0\CorePackagesGeneral.dll</HintPath>
-    </Reference>
+	  <ProjectReference Include="..\..\ProjectCorePackages\CorePackagesGeneral\CorePackagesGeneral.csproj" />
   </ItemGroup>
 
   <ItemGroup>
