--- a/Business/Business.csproj
+++ b/Business/Business.csproj
@@ -17,14 +17,8 @@
   </ItemGroup>
 
   <ItemGroup>
+    <ProjectReference Include="..\..\ProjectCorePackages\CorePackagesGeneral\CorePackagesGeneral.csproj" />
     <ProjectReference Include="..\DataAccess\DataAccess.csproj" />
     <ProjectReference Include="..\Entities\Entities.csproj" />
   </ItemGroup>
-
-  <ItemGroup>
-    <Reference Include="CorePackagesGeneral">
-      <HintPath>..\..\ProjectCorePackages\CorePackagesGeneral\bin\Debug\net7.0\CorePackagesGeneral.dll</HintPath>
-    </Reference>
-  </ItemGroup>
-
 </Project>
