azure connection added

--- a/WebAPI/appsettings.Development.json
+++ b/WebAPI/appsettings.Development.json
@@ -4,5 +4,9 @@
       "Default": "Information",
       "Microsoft.AspNetCore": "Warning"
     }
+  },
+  "ConnectionStrings": {
+    "AZURE_SQL_CONNECTIONSTRING": "Server=tcp:babapro38.database.windows.net,1433;Initial Catalog=bacpac;Encrypt=True;TrustServerCertificate=False;Connection Timeout=30;Authentication=Active Directory Default\";",
+    "AllowedHosts": "*"
   }
 }
