--- a/WebAPI/appsettings.json
+++ b/WebAPI/appsettings.json
@@ -11,5 +11,9 @@
       "Microsoft.AspNetCore": "Warning"
     }
   },
+  "ConnectionStrings": {
+    "AZURE_SQL_CONNECTIONSTRING": "Server=tcp:babapro38.database.windows.net,1433;Initial Catalog=bacpac;Encrypt=True;TrustServerCertificate=False;Connection Timeout=30;Authentication=Active Directory Default\";",
+    "AllowedHosts": "*"
+  },
   "AllowedHosts": "*"
 }
