--- a/Entities/Entities.csproj
+++ b/Entities/Entities.csproj
@@ -7,6 +7,13 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <PackageReference Include="AdaskoTheBeAsT.SecurityCodeScan.VS2022" Version="5.6.7.32">
+      <PrivateAssets>all</PrivateAssets>
+      <IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
+    </PackageReference>
+  </ItemGroup>
+
+  <ItemGroup>
 	  <ProjectReference Include="..\..\ProjectCorePackages\CorePackagesGeneral\CorePackagesGeneral.csproj" />
   </ItemGroup>
 
